# Actix-API

./: Cargo.toml
src/: .main.rs.swp  main.rs
src/handlers/: user_handler.rs
src/models/: user.rs
src/routes/: user_routes.rs
