[package]
name = "actix-microservice"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
